test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/internal_hides_external_linkage.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(x)
  =
  const int(10)
  ;
  int
  identifier(read_x)
  (
  void
  )
  {
  return
  identifier(x)
  ;
  }
