test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_declarations/undeclared_global_variable.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(x)
  ;
  }
  int
  identifier(x)
  =
  const int(0)
  ;
